<resources>
    <string name="app_name">mediaIO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_profile_picture_id">default_user_picture.jpg</string>
    <string name="title_home">Главная</string>
    <string name="title_search">Поиск</string>
    <string name="title_add">Добавить</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_profile">Профиль</string>
    <string name="title_description">Описание</string>
    <string name="title_subscribers">Подписчики</string>
    <string name="title_subscribes">Подписки</string>
    <string name="title_publications">Публикации</string>
    <string name="title_comments">Комментарии:</string>
    <string name="title_albums">Альбомы</string>
    <string name="title_post_list">Посты</string>
    <string name="title_choose_posts">Выберите посты</string>
    <string name="title_new_album">Новый Альбом</string>
    <string name="hint_title_email">Email</string>
    <string name="hint_title_password">Пароль</string>
    <string name="button_title_signIn">Войти в аккаунт</string>
    <string name="button_title_unsubscribe">отписаться</string>
    <string name="title_registration">Зарегистрироваться сейчас</string>
    <string name="title_info">Укажите некоторую информацию о вас</string>
    <string name="title_image_settings">Параметры</string>
    <string name="title_image_effects">Эффекты</string>
    <string name="title_image_brightness">Яркость</string>
    <string name="title_image_contrast">Контраст</string>
    <string name="title_image_saturation">Насыщенность</string>
    <string name="title_image_sharpness">Резкость</string>
    <string name="title_image_hue">Оттенок</string>
    <string name="title_image_smoothing">Сглаживание</string>
    <string name="hint_title_username">Ваше имя</string>
    <string name="hint_title_profilename">Тэг (@sometag_official)</string>
    <string name="hint_title_album_name">Имя альбома</string>
    <string name="title_hashtag_name">#hashtag</string>
    <string name="title_hashtag_view_count">Просмотров: </string>
    <string name="button_title_registration">Зарегистрироваться</string>
    <string name="button_title_edit_profile">Редактировать профиль</string>
    <string name="button_title_next">Далее</string>
    <string name="button_title_confirm">Подтвердить</string>
    <string name="button_title_subscribe">подписаться</string>
    <string name="title_edit_profile_photo">Изменить фотографию профиля</string>
    <string name="navigation_add_dialog_post_title">Добавить Пост</string>
    <string name="navigation_add_dialog_story_title">Записать Историю</string>
    <string name="navigation_add_dialog_scan_qr_title">Сканировать Qr</string>
    <string name="choose_image_source_dialog_camera_title">Сделать фото</string>
    <string name="choose_image_source_dialog_gallery_title">Выбрать из галлереи</string>
    <string name="choose_image_dialog_title">Выберите изображение</string>
    <string name="title_add_description">Добавить описание</string>
    <string name="hint_title_edit_description">Описание</string>
    <string name="button_title_add_post">Опубликовать</string>
    <string name="title_default_like_count">0</string>
    <string name="title_bring_phone">Поднесите свой телефон к qr коду</string>
    <string name="title_default_comments_count">0</string>
    <string name="title_default_tag_view_count">0</string>
    <string name="title_add_comment">Добавить комментарий</string>
    <string name="title_search_bar">Use # for posts use @ for users</string>
    <string name="temp_photo_request_key">tempPhotoResultRequestKey</string>
    <string name="temp_photo_bundle_key">tempPhotoBundleKey</string>
    <string name="temp_photo_name">tempResult.jpg</string>
    <string name="temp_video_name">tempVideo.</string>
    <string name="temp_qr_name">tempQr.jpg</string>
    <string name="error_taking_photo_title">Не удалось сделать снимок</string>
    <string name="profile_posts_span_count">3</string>
    <string name="error_permissions_not_granted_title">Пожалуйста предоставьте приложению разрешения для корректной работы</string>
    <string name="title_camera_mode_image">Фото</string>
    <string name="title_camera_mode_video">Видео</string>
    <string name="profile_markup_info_item_index">0</string>
    <string name="profile_markup_edit_item_index">1</string>
    <string name="profile_markup_subscribe_item_index">1</string>
    <string name="profile_markup_post_list_item_index">2</string>
    <string name="profile_markup_unsubscribe_item_index">1</string>
    <string name="album_item_count_to_show">6</string>
    <string name="bottom_navigation_width">70dp</string>
    <string name="story_length">15000</string>
    <string name="story_timer_tick">100</string>
    <string name="story_api_url"> https://great-accepted-muskrat.ngrok-free.app</string>
    <string name="day_in_unix">86400</string>
    <string name="nfc_sharing_tag">!PostrIdSharingTag!</string>
    <string name="qr_profile_sharing_tag">!PostrProifleIdSharing!</string>
    <string name="title_done">👌</string>
</resources>