<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home3"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_addcircle"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_archive"
        android:title="@string/title_favorite"></item>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_usersquare"
        android:title="@string/title_profile"></item>

</menu>