<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.AuthFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAuth"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/button_title_signIn"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:backgroundTint="?attr/colorSecondaryVariant"
        app:cornerRadius="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_registration"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginBottom="80dp"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:ems="14"
            android:hint="@string/hint_title_email"
            android:textStyle="bold"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:ems="14"
            android:textStyle="bold"
            android:hint="@string/hint_title_password"
            android:inputType="textPassword" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>