<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/cropped_primary_color_variant_background"
    android:layout_marginBottom="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/imageItemViewPager"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/imagePostProfilePhotoView"
        fresco:roundAsCircle="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/imageItemTabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:tabBackground="@drawable/dot_indicator_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageItemViewPager" />

    <TextView
        android:id="@+id/imagePostDescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageItemTabLayout" />

    <ImageButton
        android:id="@+id/imagePostAddToFavoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_to_favorites" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePostDescriptionView">

        <ImageButton
            android:id="@+id/imagePostLikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_like" />

        <TextView
            android:id="@+id/imagePostLikeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/title_default_like_count"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imagePostCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_comment" />

        <TextView
            android:id="@+id/imagePostCommentCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/title_default_comments_count"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imagePostProfilePhotoView"
        app:layout_constraintStart_toEndOf="@+id/imagePostProfilePhotoView"
        app:layout_constraintTop_toTopOf="@+id/imagePostProfilePhotoView">

        <TextView
            android:id="@+id/imagePostNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/imagePostTagView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:text="\@usertag"
            android:textSize="13dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>